[package]
name = "near-blocks-api-wasm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.31"
reqwasm="0.5.0"
serde = "1.0.137"
serde_json = "1.0.81"
log = "0.4.6"
wasm-logger = "0.2.0"
chrono = "0.4.19"
wasm-bindgen = "0.2.81"
futures="0.3.21"
console_error_panic_hook="0.1.7"
lexical = "6.1.1"

[dependencies.web-sys]
version = "0.3.58"
features=[
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement"
]